Bug 1762125. Allow DXVA on newer Intel drivers.r=aosmond,a=aosmond

Newer Intel drivers break our assumptions about the bottom four digits
being the build id and we end up blocking newer drivers with build ids
like 11404. This reverts the change in bug 1295902 which changed this
blocklist rule to only look at the build number. I think bug 1295902 was
just trying to be more correct and I don't know that it actually blocks
important crashes. Decoding now mostly happens in the GPU process
so the impact of these crashes is reduced from what it originally was.

The information on how to interpret Intel driver version is from:
https://www.intel.ca/content/www/ca/en/support/articles/000005654/graphics.html

The proper fix is to have Intel specific driver version parsing.

This is a more conservative fix that also adds blocking for drivers
earlier or equal to 8.15.10.2849.

Differential Revision: https://phabricator.services.mozilla.com/D143362